# Notes

./: .gitignore  manage.py  pyproject.toml  readme.md  tasks.txt  testFaker.py
Notes/: settings.py  urls.py
accounts/: admin.py  email.py  forms.py  history.py  middleware.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/static/accounts/: profile.css
accounts/templates/: authentication.html  edit_password.html  edit_user_profile.html  register_confirm_email.html  registration.html  reset_password.html  user_profile.html
notes/: celery.py  settings.py  urls.py
posts/: admin.py  forms.py  models.py  service.py  tasks.py  views.py
posts/api/: permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
static/css/: global.css  main.css
templates/: create_form.html  edit_form.html  note.html  posts_history.html
templates/inc/: _menu.html  _posts-list.html
